qt6-base (6.2.4+dfsg-1) UNRELEASED; urgency=medium

  [ Lu YaNing ]
  * New upstream release (6.2.4).
  * Update ABI to 6.2.4.
  * Update installed files.
  * Update symbols.
  * Update d/copyright.
  * Update lintian-overrides.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 20 Mar 2022 10:13:27 +0000

qt6-base (6.2.2+dfsg-6) unstable; urgency=medium

  [ Pino Toscano ]
  * Backport upstream commit 06e45cbd6a2e09bc32cb1c9aa3779d6bd5282c45 to fix
    a memory leak in QFileSystemEngine::canonicalName() (caused by patch
    upstream_Avoid-a-stack-buffer-when-not-needed.patch); patch
    upstream_QFileSystemEngine-canonicalName-Unix-clean-up-contro.patch.
  * Replace the libmariadb-dev-compat build dependency with
    default-libmysqlclient-dev: other than aligning with what is used for
    qt5-base, it represents better "the default MySQL client library" in Debian.

 -- Patrick Franz <deltaone@debian.org>  Mon, 21 Feb 2022 18:35:17 +0100

qt6-base (6.2.2+dfsg-5) unstable; urgency=medium

  [ Patrick Franz ]
  * Upload to unstable.

 -- Patrick Franz <deltaone@debian.org>  Tue, 15 Feb 2022 21:10:59 +0100

qt6-base (6.2.2+dfsg-4) experimental; urgency=medium

  [ Pino Toscano ]
  * Backport upstream commit 06e7b5168e269f913f03ecb9d77fc82db4d9dfd6 to enable
    LFS on Hurd; patch upstream_Hurd-enable-XOPEN-largefile-APIs.patch.
  * Replace patch path_max.diff with upstream commit
    7c54988b1b3b9eb4d2f3650c1ba5ffe97673ca92; patch
    upstream_Avoid-a-stack-buffer-when-not-needed.patch.
  * Pass -DFEATURE_system_libb2=ON to cmake to make sure the system blake2
    implementation (libb2) is used instead of the embedded copy.

 -- Patrick Franz <deltaone@debian.org>  Tue, 15 Feb 2022 01:09:24 +0100

qt6-base (6.2.2+dfsg-3) experimental; urgency=medium

  * Team upload.
  * Backport/add patches for Hurd support:
    - backport upstream commit 099e0fff61f080e2d628c8f472df78f6fd2f5234 to
      support Hurd in the CMake build system; patch